fix: overlapping text on CV

--- a/src/components/MainContent/AboutMe/Index.scss
+++ b/src/components/MainContent/AboutMe/Index.scss
@@ -3,6 +3,10 @@
   height: 100%;
 }
 
+.cv {
+  width: 70%;
+}
+
 .price {
   padding-left: 5%;
 }
